--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <td>⭐⭐⭐⭐⭐</td>
                         </tr>
                         <tr>
-                            <td>Pandas</td>
+                            <td>Bootstrap</td>
                             <td>⭐⭐⭐⭐</td>
                         </tr>
 
@@ -90,8 +90,8 @@
                 </td>
                 <td> <table>
                         <tr>
-                            <td>Api</td>
-                            <td>⭐⭐⭐⭐</td>
+                            <td>Django</td>
+                            <td>⭐⭐⭐⭐⭐</td>
                         </tr>
                         <tr><td>Css</td>
                             <td>⭐⭐⭐⭐⭐</td>
